variables.RunHalf.scala.error
Compilation error:
RunHalf:8: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
  if (Color.orange){
            ^RunHalf:9: error: not found: value OrangeCells
    orangeCells = OrangeCells +1
                  ^